WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
154961
Slider thumb style should not depend on renderers
https://bugs.webkit.org/show_bug.cgi?id=154961
Summary
Slider thumb style should not depend on renderers
Antti Koivisto
Reported
2016-03-03 01:41:06 PST
Currently slider thumb pseudo id is computed based on host element renderer. Style is the input for building a render tree and should be computable without having one.
Attachments
patch
(8.17 KB, patch)
2016-03-03 01:47 PST
,
Antti Koivisto
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2016-03-03 01:47:19 PST
Created
attachment 272745
[details]
patch
Antti Koivisto
Comment 2
2016-03-03 02:48:16 PST
https://trac.webkit.org/r197502
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug